--- a/index.html
+++ b/index.html
@@ -1,48 +1,85 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>My Portfolio</title>
+    <meta charset="UTF-8">
+    <title>Akshaya G | Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-    <h1>Akshaya G</h1>
-    <p>B.Tech Computer Science and Business Systems</p>
-    <p>4th Semester | Jerusalem College of Engineering</p>
+    <!-- NAVBAR -->
+    <nav>
+        <h2 class="logo">Akshaya</h2>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 
-    <hr>
+    <!-- HOME -->
+    <section id="home" class="home">
+        <h1>Hi, I'm <span>Akshaya G</span></h1>
+        <p>Computer Science, Technology & Business Student</p>
+        <p>Future Data Analyst</p>
+    </section>
 
-    <h2>About Me</h2>
-    <p>
-        I am a 4th semester B.Tech CSBS student.
-        I am interested in programming, database management
-        and data visualization using Power BI.
-        I am continuously improving my technical and problem-solving skills.
-    </p>
+    <!-- ABOUT -->
+    <section id="about">
+        <h2>About Me</h2>
+        <p>
+            I am Akshaya G, a B.Tech Computer Science and Business Systems student.
+            I am interested in technology, business, and data analytics.
+            My goal is to become a Data Analyst and work with data to generate
+            meaningful business insights.
+        </p>
+    </section>
 
-    <h2>Skills</h2>
-    <ul>
-        <li>C, Java, Python</li>
-        <li>MySQL</li>
-        <li>Power BI (DAX)</li>
-        <li>HTML & CSS (Basic)</li>
-    </ul>
+    <!-- SKILLS -->
+    <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>C, Java, Python</li>
+            <li>MySQL</li>
+            <li>Power BI (DAX)</li>
+            <li>HTML & CSS (Basic)</li>
+        </ul>
+    </section>
 
-    <h2>Projects</h2>
-    <ul>
-        <li>
-            <b>Supermarket Sales Dashboard</b><br>
-            Created a Power BI dashboard using DAX to analyze sales and profit.
-        </li>
-        <li>
-            <b>Student Database Management System</b><br>
-            Designed tables and wrote SQL queries using MySQL.
-        </li>
-    </ul>
+    <!-- SERVICES -->
+    <section id="services">
+        <h2>Services</h2>
+        <div class="cards">
+            <div class="card">Data Analysis</div>
+            <div class="card">Power BI Dashboard Creation</div>
+            <div class="card">Database Management</div>
+        </div>
+    </section>
 
-    <h2>Contact</h2>
-    <p>Email: akshayagopi0712@gmail.com</p>
+    <!-- PROJECTS -->
+    <section id="projects">
+        <h2>Projects</h2>
+        <ul>
+            <li><b>Supermarket Sales Dashboard</b> – Power BI & DAX</li>
+            <li><b>Student Database Management System</b> – MySQL</li>
+        </ul>
+    </section>
+
+    <!-- CONTACT -->
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: akshayagopi0712@gmail.com</p>
+    </section>
+
+    <footer>
+        <p>© 2025 Akshaya G</p>
+    </footer>
 
 </body>
 </html>
+
+
 
