--- a/index.html
+++ b/index.html
@@ -5,91 +5,92 @@
     <title>Akshaya G | Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <style>
+        html {
+            scroll-behavior: smooth;
+        }
+    </style>
 </head>
 <body>
 
-    <!-- NAVBAR -->
-    <nav>
-        <h2 class="logo">Akshaya</h2>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
+<!-- NAVBAR -->
+<nav>
+    <h2 class="logo">Akshaya G</h2>
+    <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#resume">Resume</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
 
-    <!-- HOME -->
-    <section id="home" class="home">
-        <img src="profile.jpg" alt="Akshaya G" class="profile-pic">
-        <h1>Hi, I'm <span>Akshaya G</span></h1>
-        <p>Computer Science, Technology & Business Student</p>
-        <p class="role">Future Data Analyst</p>
+<!-- SCREEN 1: HOME + ABOUT -->
+<section id="home" class="home">
+    <img src="profile.jpg" alt="Akshaya G" class="profile-pic">
+    <h1>Hi, I'm <span>Akshaya G</span></h1>
+    <p>B.Tech CSBS | Jerusalem College of Engineering</p>
+    <p>Future Data Analyst | Interested in programming, database, and analytics</p>
+</section>
 
-        <a href="Akshaya_Resume.pdf" download class="btn">Download Resume</a>
-    </section>
+<section id="about">
+    <h2>About Me</h2>
+    <p>
+        I am a 4th semester B.Tech CSBS student. I enjoy working with data,
+        building dashboards, and solving problems. My hobbies include exploring analytics tools
+        and improving my technical skills.
+    </p>
+</section>
 
-    <!-- ABOUT -->
-    <section id="about">
-        <h2>About Me</h2>
-        <p>
-            I am Akshaya G, a B.Tech Computer Science and Business Systems student.
-            I am interested in technology, business, and data analytics.
-            My goal is to become a Data Analyst and create meaningful insights
-            using data and visualization tools.
-        </p>
-    </section>
+<!-- SCREEN 2: SKILLS + PROJECTS -->
+<section id="skills">
+    <h2>Skills</h2>
+    <ul class="skills-list">
+        <li><b>Technical:</b> C, Java, Python, MySQL, Power BI (DAX), HTML & CSS</li>
+        <li><b>Soft Skills:</b> Communication, Teamwork, Problem Solving</li>
+    </ul>
+</section>
 
-    <!-- SKILLS -->
-    <section id="skills">
-        <h2>Skills</h2>
-        <ul class="list">
-            <li>C, Java, Python</li>
-            <li>MySQL</li>
-            <li>Power BI (DAX)</li>
-            <li>HTML & CSS (Basic)</li>
-        </ul>
-    </section>
-
-    <!-- SERVICES -->
-    <section id="services">
-        <h2>Services</h2>
-        <div class="cards">
-            <div class="card">Data Analysis</div>
-            <div class="card">Power BI Dashboard Creation</div>
-            <div class="card">Database Management</div>
+<section id="projects">
+    <h2>Projects</h2>
+    <div class="cards">
+        <div class="card">
+            <b>Supermarket Sales Dashboard</b><br>
+            Power BI & DAX for sales analysis and profit insights.
         </div>
-    </section>
-
-    <!-- PROJECTS -->
-    <section id="projects">
-        <h2>Projects</h2>
-        <div class="cards">
-            <div class="card">
-                <b>Supermarket Sales Dashboard</b><br>
-                Power BI & DAX
-            </div>
-            <div class="card">
-                <b>Student Database Management System</b><br>
-                MySQL
-            </div>
+        <div class="card">
+            <b>Student Database Management System</b><br>
+            MySQL queries and tables for student records management.
         </div>
-    </section>
+        <div class="card">
+            <b>Personal Portfolio Website</b><br>
+            HTML, CSS & GitHub Pages for portfolio showcase.
+        </div>
+    </div>
+</section>
 
-    <!-- CONTACT -->
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: akshayagopi0712@gmail.com</p>
-    </section>
+<!-- SCREEN 3: RESUME + CONTACT -->
+<section id="resume">
+    <h2>Resume</h2>
+    <a href="Akshaya_Resume.pdf" download class="btn">Download Resume</a>
+</section>
 
-    <footer>
-        <p>© 2025 Akshaya G</p>
-    </footer>
+<section id="contact">
+    <h2>Contact</h2>
+    <p>Email: <a href="mailto:akshayagopi0712@gmail.com">akshayagopi0712@gmail.com</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/your-linkedin" target="_blank">linkedin.com/in/your-linkedin</a></p>
+    <p>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
+</section>
+
+<footer>
+    <p>© 2025 Akshaya G</p>
+</footer>
 
 </body>
 </html>
+
+
 
 
 
