--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Akshaya G | Portfolio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <style>
-        html {
-            scroll-behavior: smooth;
-        }
-    </style>
+<meta charset="UTF-8">
+<title>Akshaya G | Portfolio</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="style.css">
+<style>
+html {
+    scroll-behavior: smooth;
+}
+</style>
 </head>
 <body>
 
@@ -27,14 +27,14 @@
 </nav>
 
 <!-- SCREEN 1: HOME + ABOUT -->
-<section id="home" class="home">
+<section id="home" class="screen">
     <img src="profile.jpg" alt="Akshaya G" class="profile-pic">
     <h1>Hi, I'm <span>Akshaya G</span></h1>
     <p>B.Tech CSBS | Jerusalem College of Engineering</p>
     <p>Future Data Analyst | Interested in programming, database, and analytics</p>
 </section>
 
-<section id="about">
+<section id="about" class="screen">
     <h2>About Me</h2>
     <p>
         I am a 4th semester B.Tech CSBS student. I enjoy working with data,
@@ -44,7 +44,7 @@
 </section>
 
 <!-- SCREEN 2: SKILLS + PROJECTS -->
-<section id="skills">
+<section id="skills" class="screen">
     <h2>Skills</h2>
     <ul class="skills-list">
         <li><b>Technical:</b> C, Java, Python, MySQL, Power BI (DAX), HTML & CSS</li>
@@ -52,7 +52,7 @@
     </ul>
 </section>
 
-<section id="projects">
+<section id="projects" class="screen">
     <h2>Projects</h2>
     <div class="cards">
         <div class="card">
@@ -71,16 +71,16 @@
 </section>
 
 <!-- SCREEN 3: RESUME + CONTACT -->
-<section id="resume">
+<section id="resume" class="screen">
     <h2>Resume</h2>
     <a href="Akshaya_Resume.pdf" download class="btn">Download Resume</a>
 </section>
 
-<section id="contact">
+<section id="contact" class="screen">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:akshayagopi0712@gmail.com">akshayagopi0712@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/your-linkedin" target="_blank">linkedin.com/in/your-linkedin</a></p>
-    <p>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/akshaya-gopi-7b18a5371" target="_blank">linkedin.com/in/akshaya-gopi-7b18a5371</a></p>
+    <p>GitHub: <a href="https://github.com/akshayagcsbs2024-dotcom" target="_blank">github.com/akshayagcsbs2024-dotcom</a></p>
 </section>
 
 <footer>
@@ -89,6 +89,8 @@
 
 </body>
 </html>
+
+
 
 
 
