--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
 <style>
-html {
-    scroll-behavior: smooth;
-}
+html { scroll-behavior: smooth; }
 </style>
 </head>
 <body>
@@ -89,6 +87,8 @@ html {
 
 </body>
 </html>
+
+
 
 
 
