--- a/index.html
+++ b/index.html
@@ -1,84 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Akshaya G | Portfolio</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="style.css">
-<style>
-html { scroll-behavior: smooth; }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Akshaya G | Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<!-- NAVBAR -->
-<nav>
-    <h2 class="logo">Akshaya G</h2>
-    <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#resume">Resume</a></li>
-        <li><a href="#contact">Contact</a></li>
-    </ul>
-</nav>
+<header class="header">
+    <img src="profile.jpg" alt="Profile Photo" class="profile-img">
+    <h1>Akshaya G</h1>
+    <p>B.Tech Computer Science and Business Systems</p>
+    <p>Jerusalem College of Engineering</p>
+    <p class="interest">Interested in Programming, Databases & Data Visualization</p>
+</header>
 
-<!-- SCREEN 1: HOME + ABOUT -->
-<section id="home" class="screen">
-    <img src="profile.jpg" alt="Akshaya G" class="profile-pic">
-    <h1>Hi, I'm <span>Akshaya G</span></h1>
-    <p>B.Tech CSBS | Jerusalem College of Engineering</p>
-    <p>Future Data Analyst | Interested in programming, database, and analytics</p>
-</section>
-
-<section id="about" class="screen">
+<section class="section">
     <h2>About Me</h2>
     <p>
-        I am a 4th semester B.Tech CSBS student. I enjoy working with data,
-        building dashboards, and solving problems. My hobbies include exploring analytics tools
-        and improving my technical skills.
+        I am a B.Tech CSBS student who is passionate about combining technology and business.
+        I enjoy learning programming and applying my knowledge in practical projects.
     </p>
+    <p><strong>Strengths:</strong> Quick learner, Team player, Consistent</p>
+    <p><strong>Hobbies:</strong> Exploring tech tools, Listening to music</p>
 </section>
 
-<!-- SCREEN 2: SKILLS + PROJECTS -->
-<section id="skills" class="screen">
+<section class="section">
     <h2>Skills</h2>
-    <ul class="skills-list">
-        <li><b>Technical:</b> C, Java, Python, MySQL, Power BI (DAX), HTML & CSS</li>
-        <li><b>Soft Skills:</b> Communication, Teamwork, Problem Solving</li>
-    </ul>
-</section>
-
-<section id="projects" class="screen">
-    <h2>Projects</h2>
-    <div class="cards">
-        <div class="card">
-            <b>Supermarket Sales Dashboard</b><br>
-            Power BI & DAX for sales analysis and profit insights.
+    <div class="skills">
+        <div>
+            <h3>Technical Skills</h3>
+            <ul>
+                <li>C</li>
+                <li>Java</li>
+                <li>Python</li>
+                <li>HTML & CSS</li>
+                <li>MySQL</li>
+            </ul>
         </div>
-        <div class="card">
-            <b>Student Database Management System</b><br>
-            MySQL queries and tables for student records management.
-        </div>
-        <div class="card">
-            <b>Personal Portfolio Website</b><br>
-            HTML, CSS & GitHub Pages for portfolio showcase.
+        <div>
+            <h3>Soft Skills</h3>
+            <ul>
+                <li>Communication</li>
+                <li>Teamwork</li>
+                <li>Time Management</li>
+                <li>Problem Solving</li>
+            </ul>
         </div>
     </div>
 </section>
 
-<!-- SCREEN 3: RESUME + CONTACT -->
-<section id="resume" class="screen">
-    <h2>Resume</h2>
-    <a href="Akshaya_Resume.pdf" download class="btn">Download Resume</a>
+<section class="section">
+    <h2>Projects</h2>
+
+    <div class="project">
+        <h3>Student Portfolio Website</h3>
+        <p>Designed a responsive personal portfolio using HTML and CSS.</p>
+        <p><strong>Tools:</strong> HTML, CSS, VS Code</p>
+    </div>
+
+    <div class="project">
+        <h3>Supermarket Sales Dashboard</h3>
+        <p>Created a Power BI dashboard using DAX to analyze sales data.</p>
+        <p><strong>Tools:</strong> Power BI, DAX</p>
+    </div>
+
+    <div class="project">
+        <h3>Database Management Mini Project</h3>
+        <p>Developed and queried a database using SQL.</p>
+        <p><strong>Tools:</strong> MySQL</p>
+    </div>
 </section>
 
-<section id="contact" class="screen">
+<section class="section">
+    <h2>Resume</h2>
+    <a href="resume.pdf" class="btn" target="_blank">Download Resume</a>
+</section>
+
+<section class="section">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:akshayagopi0712@gmail.com">akshayagopi0712@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/akshaya-gopi-7b18a5371" target="_blank">linkedin.com/in/akshaya-gopi-7b18a5371</a></p>
-    <p>GitHub: <a href="https://github.com/akshayagcsbs2024-dotcom" target="_blank">github.com/akshayagcsbs2024-dotcom</a></p>
+    <p>LinkedIn:
+        <a href="https://www.linkedin.com/in/akshaya-gopi-7" target="_blank">
+            linkedin.com/in/akshaya-gopi-7
+        </a>
+    </p>
 </section>
 
 <footer>
@@ -87,17 +94,3 @@ html { scroll-behavior: smooth; }
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
