--- a/index.html
+++ b/index.html
@@ -8,25 +8,34 @@
 </head>
 <body>
 
-<header class="header">
+<!-- Navbar -->
+<nav class="navbar">
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#projects">Projects</a>
+    <a href="#skills">Skills</a>
+    <a href="#contact">Contact</a>
+    <a href="#github">GitHub</a>
+</nav>
+
+<!-- Hero Section -->
+<header id="home" class="header">
     <img src="profile.jpg" alt="Profile Photo" class="profile-img">
-    <h1>Akshaya G</h1>
-    <p>B.Tech Computer Science and Business Systems</p>
-    <p>Jerusalem College of Engineering</p>
-    <p class="interest">Interested in Programming, Databases & Data Visualization</p>
+    <h1>Hello! I’m Akshaya G</h1>
+    <p>B.Tech CSBS Student | Aspiring Data Analyst</p>
+    <a href="#projects" class="btn">See Projects</a>
 </header>
 
-<section class="section">
+<!-- About Section -->
+<section id="about" class="section">
     <h2>About Me</h2>
-    <p>
-        I am a B.Tech CSBS student who is passionate about combining technology and business.
-        I enjoy learning programming and applying my knowledge in practical projects.
-    </p>
+    <p>I am a 4th semester B.Tech Computer Science and Business Systems student at Jerusalem College of Engineering. I focus on programming, data visualization, and analytics projects related to my course.</p>
     <p><strong>Strengths:</strong> Quick learner, Team player, Consistent</p>
     <p><strong>Hobbies:</strong> Exploring tech tools, Listening to music</p>
 </section>
 
-<section class="section">
+<!-- Skills Section -->
+<section id="skills" class="section">
     <h2>Skills</h2>
     <div class="skills">
         <div>
@@ -37,6 +46,7 @@
                 <li>Python</li>
                 <li>HTML & CSS</li>
                 <li>MySQL</li>
+                <li>Power BI & DAX</li>
             </ul>
         </div>
         <div>
@@ -51,43 +61,50 @@
     </div>
 </section>
 
-<section class="section">
+<!-- Projects Section -->
+<section id="projects" class="section">
     <h2>Projects</h2>
 
     <div class="project">
-        <h3>Student Portfolio Website</h3>
-        <p>Designed a responsive personal portfolio using HTML and CSS.</p>
+        <h3>Exam Data Analysis</h3>
+        <p>Analyzed exam results dataset to find trends, generate insights, and visualize student performance.</p>
+        <p><strong>Tools:</strong> Python, Pandas, Matplotlib, Power BI</p>
+    </div>
+
+    <div class="project">
+        <h3>Portfolio Website</h3>
+        <p>Created a responsive personal portfolio to showcase skills and projects.</p>
         <p><strong>Tools:</strong> HTML, CSS, VS Code</p>
     </div>
 
     <div class="project">
-        <h3>Supermarket Sales Dashboard</h3>
-        <p>Created a Power BI dashboard using DAX to analyze sales data.</p>
-        <p><strong>Tools:</strong> Power BI, DAX</p>
-    </div>
-
-    <div class="project">
-        <h3>Database Management Mini Project</h3>
-        <p>Developed and queried a database using SQL.</p>
+        <h3>Database Mini Project</h3>
+        <p>Designed and queried a small database related to course projects using MySQL.</p>
         <p><strong>Tools:</strong> MySQL</p>
     </div>
+
 </section>
 
-<section class="section">
+<!-- Resume Section -->
+<section id="resume" class="section">
     <h2>Resume</h2>
     <a href="resume.pdf" class="btn" target="_blank">Download Resume</a>
 </section>
 
-<section class="section">
+<!-- Contact Section -->
+<section id="contact" class="section">
     <h2>Contact</h2>
     <p>Email: <a href="mailto:akshayagopi0712@gmail.com">akshayagopi0712@gmail.com</a></p>
-    <p>LinkedIn:
-        <a href="https://www.linkedin.com/in/akshaya-gopi-7" target="_blank">
-            linkedin.com/in/akshaya-gopi-7
-        </a>
-    </p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/akshaya-gopi-7" target="_blank">View Profile</a></p>
 </section>
 
+<!-- GitHub Section -->
+<section id="github" class="section">
+    <h2>GitHub</h2>
+    <p>My Projects: <a href="https://github.com/YOUR_USERNAME" target="_blank">github.com/YOUR_USERNAME</a></p>
+</section>
+
+<!-- Footer -->
 <footer>
     <p>© 2025 Akshaya G</p>
 </footer>
