--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Akshaya G | Portfolio</title>
-    <link rel="stylesheet" href="style.css">
-    <style>
-        html { scroll-behavior: smooth; }
-    </style>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Akshaya G | Portfolio</title>
+<link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<style>
+html { scroll-behavior: smooth; }
+</style>
 </head>
 <body>
 
@@ -16,10 +16,10 @@
 <nav class="navbar">
     <a href="#home">Home</a>
     <a href="#about">About</a>
-    <a href="#projects">Projects</a>
     <a href="#skills">Skills</a>
+    <a href="#projects">Projects</a>
+    <a href="#resume">Resume</a>
     <a href="#contact">Contact</a>
-    <a href="#github">GitHub</a>
 </nav>
 
 <!-- Hero Section -->
@@ -33,7 +33,7 @@
 <!-- About Section -->
 <section id="about" class="section">
     <h2>About Me</h2>
-    <p>I am a 4th semester B.Tech Computer Science and Business Systems student at Jerusalem College of Engineering. I focus on programming, data visualization, and analytics projects related to my course.</p>
+    <p>I am a 4th semester B.Tech Computer Science and Business Systems student at Jerusalem College of Engineering.</p>
     <p><strong>Strengths:</strong> Quick learner, Team player, Consistent</p>
     <p><strong>Hobbies:</strong> Exploring tech tools, Listening to music</p>
 </section>
@@ -68,25 +68,21 @@
 <!-- Projects Section -->
 <section id="projects" class="section">
     <h2>Projects</h2>
-
     <div class="project">
         <h3>Exam Data Analysis</h3>
         <p>Analyzed exam results dataset to find trends, generate insights, and visualize student performance.</p>
         <p><strong>Tools:</strong> Python, Pandas, Matplotlib, Power BI</p>
     </div>
-
     <div class="project">
         <h3>Portfolio Website</h3>
         <p>Created a responsive personal portfolio to showcase skills and projects.</p>
         <p><strong>Tools:</strong> HTML, CSS, VS Code</p>
     </div>
-
     <div class="project">
         <h3>Database Mini Project</h3>
         <p>Designed and queried a small database related to course projects using MySQL.</p>
         <p><strong>Tools:</strong> MySQL</p>
     </div>
-
 </section>
 
 <!-- Resume Section -->
@@ -102,29 +98,19 @@
     <p>LinkedIn: <a href="https://www.linkedin.com/in/akshaya-gopi-7" target="_blank">View Profile</a></p>
 </section>
 
-<!-- GitHub Section -->
-<section id="github" class="section">
-    <h2>GitHub</h2>
-    <p>My Projects: <a href="https://github.com/YOUR_USERNAME" target="_blank">github.com/YOUR_USERNAME</a></p>
-</section>
-
 <!-- Footer -->
 <footer>
-    <p>© 2025 Akshaya G</p>
+<p>© 2025 Akshaya G</p>
 </footer>
 
-<!-- Fade-in animation script -->
+<!-- Fade-in animation -->
 <script>
 const sections = document.querySelectorAll('.section');
-
 const observer = new IntersectionObserver(entries => {
     entries.forEach(entry => {
-        if(entry.isIntersecting){
-            entry.target.classList.add('show');
-        }
+        if(entry.isIntersecting) entry.target.classList.add('show');
     });
 }, { threshold: 0.2 });
-
 sections.forEach(section => observer.observe(section));
 </script>
 
