--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 <title>Akshaya G | Portfolio</title>
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-<style>
-html { scroll-behavior: smooth; }
-</style>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<style>html { scroll-behavior: smooth; }</style>
 </head>
 <body>
 
@@ -27,6 +26,14 @@ html { scroll-behavior: smooth; }
     <img src="profile.jpg" alt="Profile Photo" class="profile-img">
     <h1>Hello! I’m Akshaya G</h1>
     <p>B.Tech CSBS Student | Aspiring Data Analyst</p>
+
+    <!-- Social Media Icons -->
+    <div class="social-icons">
+        <a href="https://www.linkedin.com/in/akshaya-gopi-7" target="_blank"><i class="fab fa-linkedin"></i></a>
+        <a href="https://github.com/YOUR_USERNAME" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="mailto:akshayagopi0712@gmail.com"><i class="fas fa-envelope"></i></a>
+    </div>
+
     <a href="#projects" class="btn">See Projects</a>
 </header>
 
@@ -42,18 +49,16 @@ html { scroll-behavior: smooth; }
 <section id="skills" class="section">
     <h2>Skills</h2>
     <div class="skills">
-        <div>
+        <div class="skill-category">
             <h3>Technical Skills</h3>
-            <ul>
-                <li>C</li>
-                <li>Java</li>
-                <li>Python</li>
-                <li>HTML & CSS</li>
-                <li>MySQL</li>
-                <li>Power BI & DAX</li>
-            </ul>
+            <div class="skill-bar"><span>C</span><div class="bar"><div class="progress" style="width: 85%;"></div></div></div>
+            <div class="skill-bar"><span>Java</span><div class="bar"><div class="progress" style="width: 80%;"></div></div></div>
+            <div class="skill-bar"><span>Python</span><div class="bar"><div class="progress" style="width: 90%;"></div></div></div>
+            <div class="skill-bar"><span>HTML & CSS</span><div class="bar"><div class="progress" style="width: 95%;"></div></div></div>
+            <div class="skill-bar"><span>MySQL</span><div class="bar"><div class="progress" style="width: 75%;"></div></div></div>
+            <div class="skill-bar"><span>Power BI & DAX</span><div class="bar"><div class="progress" style="width: 80%;"></div></div></div>
         </div>
-        <div>
+        <div class="skill-category">
             <h3>Soft Skills</h3>
             <ul>
                 <li>Communication</li>
@@ -68,20 +73,22 @@ html { scroll-behavior: smooth; }
 <!-- Projects Section -->
 <section id="projects" class="section">
     <h2>Projects</h2>
-    <div class="project">
-        <h3>Exam Data Analysis</h3>
-        <p>Analyzed exam results dataset to find trends, generate insights, and visualize student performance.</p>
-        <p><strong>Tools:</strong> Python, Pandas, Matplotlib, Power BI</p>
-    </div>
-    <div class="project">
-        <h3>Portfolio Website</h3>
-        <p>Created a responsive personal portfolio to showcase skills and projects.</p>
-        <p><strong>Tools:</strong> HTML, CSS, VS Code</p>
-    </div>
-    <div class="project">
-        <h3>Database Mini Project</h3>
-        <p>Designed and queried a small database related to course projects using MySQL.</p>
-        <p><strong>Tools:</strong> MySQL</p>
+    <div class="projects-grid">
+        <div class="project-card">
+            <h3>Exam Data Analysis</h3>
+            <p>Analyzed exam results dataset to find trends, generate insights, and visualize student performance.</p>
+            <p><strong>Tools:</strong> Python, Pandas, Matplotlib, Power BI</p>
+        </div>
+        <div class="project-card">
+            <h3>Portfolio Website</h3>
+            <p>Created a responsive personal portfolio to showcase skills and projects.</p>
+            <p><strong>Tools:</strong> HTML, CSS, VS Code</p>
+        </div>
+        <div class="project-card">
+            <h3>Database Mini Project</h3>
+            <p>Designed and queried a small database related to course projects using MySQL.</p>
+            <p><strong>Tools:</strong> MySQL</p>
+        </div>
     </div>
 </section>
 
@@ -98,21 +105,14 @@ html { scroll-behavior: smooth; }
     <p>LinkedIn: <a href="https://www.linkedin.com/in/akshaya-gopi-7" target="_blank">View Profile</a></p>
 </section>
 
+<!-- Back to Top Button -->
+<button id="backToTop"><i class="fas fa-arrow-up"></i></button>
+
 <!-- Footer -->
 <footer>
-<p>© 2025 Akshaya G</p>
+    <p>© 2025 Akshaya G</p>
 </footer>
 
-<!-- Fade-in animation -->
-<script>
-const sections = document.querySelectorAll('.section');
-const observer = new IntersectionObserver(entries => {
-    entries.forEach(entry => {
-        if(entry.isIntersecting) entry.target.classList.add('show');
-    });
-}, { threshold: 0.2 });
-sections.forEach(section => observer.observe(section));
-</script>
-
+<script src="script.js"></script>
 </body>
 </html>
