--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
     <div class="skills">
         <div class="skill-category">
             <h3>Technical Skills</h3>
-            <div class="skill-bar"><span>C</span><div class="bar"><div class="progress" style="width: 85%;"></div></div></div>
-            <div class="skill-bar"><span>Java</span><div class="bar"><div class="progress" style="width: 80%;"></div></div></div>
-            <div class="skill-bar"><span>Python</span><div class="bar"><div class="progress" style="width: 90%;"></div></div></div>
-            <div class="skill-bar"><span>HTML & CSS</span><div class="bar"><div class="progress" style="width: 95%;"></div></div></div>
-            <div class="skill-bar"><span>MySQL</span><div class="bar"><div class="progress" style="width: 75%;"></div></div></div>
-            <div class="skill-bar"><span>Power BI & DAX</span><div class="bar"><div class="progress" style="width: 80%;"></div></div></div>
+            <div class="skill-bar"><span>C</span><div class="bar"><div class="progress" data-progress="85%"></div></div></div>
+            <div class="skill-bar"><span>Java</span><div class="bar"><div class="progress" data-progress="80%"></div></div></div>
+            <div class="skill-bar"><span>Python</span><div class="bar"><div class="progress" data-progress="90%"></div></div></div>
+            <div class="skill-bar"><span>HTML & CSS</span><div class="bar"><div class="progress" data-progress="95%"></div></div></div>
+            <div class="skill-bar"><span>MySQL</span><div class="bar"><div class="progress" data-progress="75%"></div></div></div>
+            <div class="skill-bar"><span>Power BI & DAX</span><div class="bar"><div class="progress" data-progress="80%"></div></div></div>
         </div>
         <div class="skill-category">
             <h3>Soft Skills</h3>
@@ -113,6 +113,7 @@
     <p>© 2025 Akshaya G</p>
 </footer>
 
+<!-- JS -->
 <script src="script.js"></script>
 </body>
 </html>
