--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Akshaya G | Portfolio</title>
+
 <link rel="stylesheet" href="style.css">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-<style>html { scroll-behavior: smooth; }</style>
+
+<style>
+html { scroll-behavior: smooth; }
+</style>
 </head>
 <body>
 
-<!-- Navbar -->
+<!-- NAVBAR -->
 <nav class="navbar">
     <a href="#home">Home</a>
     <a href="#about">About</a>
@@ -21,99 +25,123 @@
     <a href="#contact">Contact</a>
 </nav>
 
-<!-- Hero Section -->
+<!-- HERO -->
 <header id="home" class="header">
-    <img src="profile.jpg" alt="Profile Photo" class="profile-img">
+    <img src="profile.jpg" class="profile-img" alt="Profile">
     <h1>Hello! I’m Akshaya G</h1>
     <p>B.Tech CSBS Student | Aspiring Data Analyst</p>
 
-    <!-- Social Media Icons -->
     <div class="social-icons">
         <a href="https://www.linkedin.com/in/akshaya-gopi-7" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="https://github.com/YOUR_USERNAME" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="#"><i class="fab fa-github"></i></a>
         <a href="mailto:akshayagopi0712@gmail.com"><i class="fas fa-envelope"></i></a>
     </div>
 
-    <a href="#projects" class="btn">See Projects</a>
+    <a href="#projects" class="btn">View Projects</a>
 </header>
 
-<!-- About Section -->
+<!-- ABOUT -->
 <section id="about" class="section">
     <h2>About Me</h2>
-    <p>I am a 4th semester B.Tech Computer Science and Business Systems student at Jerusalem College of Engineering.</p>
+    <p>
+        I am a B.Tech Computer Science and Business Systems student at Jerusalem College of Engineering.
+        I am passionate about programming, data analysis, and visualization.
+    </p>
     <p><strong>Strengths:</strong> Quick learner, Team player, Consistent</p>
-    <p><strong>Hobbies:</strong> Exploring tech tools, Listening to music</p>
+    <p><strong>Career Goal:</strong> Data Analyst / Business Intelligence Role</p>
 </section>
 
-<!-- Skills Section -->
+<!-- SKILLS -->
 <section id="skills" class="section">
     <h2>Skills</h2>
+
     <div class="skills">
         <div class="skill-category">
             <h3>Technical Skills</h3>
-            <div class="skill-bar"><span>C</span><div class="bar"><div class="progress" data-progress="85%"></div></div></div>
-            <div class="skill-bar"><span>Java</span><div class="bar"><div class="progress" data-progress="80%"></div></div></div>
-            <div class="skill-bar"><span>Python</span><div class="bar"><div class="progress" data-progress="90%"></div></div></div>
-            <div class="skill-bar"><span>HTML & CSS</span><div class="bar"><div class="progress" data-progress="95%"></div></div></div>
-            <div class="skill-bar"><span>MySQL</span><div class="bar"><div class="progress" data-progress="75%"></div></div></div>
-            <div class="skill-bar"><span>Power BI & DAX</span><div class="bar"><div class="progress" data-progress="80%"></div></div></div>
+
+            <div class="skill-bar">
+                <span>Python</span>
+                <div class="bar"><div class="progress" data-progress="90%"></div></div>
+            </div>
+
+            <div class="skill-bar">
+                <span>Java</span>
+                <div class="bar"><div class="progress" data-progress="80%"></div></div>
+            </div>
+
+            <div class="skill-bar">
+                <span>HTML & CSS</span>
+                <div class="bar"><div class="progress" data-progress="95%"></div></div>
+            </div>
+
+            <div class="skill-bar">
+                <span>MySQL</span>
+                <div class="bar"><div class="progress" data-progress="75%"></div></div>
+            </div>
+
+            <div class="skill-bar">
+                <span>Power BI & DAX</span>
+                <div class="bar"><div class="progress" data-progress="80%"></div></div>
+            </div>
         </div>
+
         <div class="skill-category">
             <h3>Soft Skills</h3>
             <ul>
                 <li>Communication</li>
                 <li>Teamwork</li>
-                <li>Time Management</li>
                 <li>Problem Solving</li>
+                <li>Time Management</li>
             </ul>
         </div>
     </div>
 </section>
 
-<!-- Projects Section -->
+<!-- PROJECTS -->
 <section id="projects" class="section">
     <h2>Projects</h2>
+
     <div class="projects-grid">
         <div class="project-card">
             <h3>Exam Data Analysis</h3>
-            <p>Analyzed exam results dataset to find trends, generate insights, and visualize student performance.</p>
-            <p><strong>Tools:</strong> Python, Pandas, Matplotlib, Power BI</p>
+            <p>Analyzed student exam data and visualized performance insights.</p>
+            <p><strong>Tools:</strong> Python, Pandas, Power BI</p>
         </div>
+
         <div class="project-card">
             <h3>Portfolio Website</h3>
-            <p>Created a responsive personal portfolio to showcase skills and projects.</p>
-            <p><strong>Tools:</strong> HTML, CSS, VS Code</p>
+            <p>Responsive personal portfolio website.</p>
+            <p><strong>Tools:</strong> HTML, CSS, JavaScript</p>
         </div>
+
         <div class="project-card">
             <h3>Database Mini Project</h3>
-            <p>Designed and queried a small database related to course projects using MySQL.</p>
+            <p>Designed relational database and executed SQL queries.</p>
             <p><strong>Tools:</strong> MySQL</p>
         </div>
     </div>
 </section>
 
-<!-- Resume Section -->
+<!-- RESUME -->
 <section id="resume" class="section">
     <h2>Resume</h2>
     <a href="resume.pdf" class="btn resume-btn" target="_blank">Download Resume</a>
 </section>
 
-<!-- Contact Section -->
+<!-- CONTACT -->
 <section id="contact" class="section">
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:akshayagopi0712@gmail.com">akshayagopi0712@gmail.com</a></p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/akshaya-gopi-7" target="_blank">View Profile</a></p>
+    <p>Email: akshayagopi0712@gmail.com</p>
+    <p>LinkedIn: Akshaya G</p>
 </section>
 
-<!-- Back to Top Button -->
+<!-- BACK TO TOP -->
 <button id="backToTop"><i class="fas fa-arrow-up"></i></button>
 
-<!-- Footer -->
 <footer>
     <p>© 2025 Akshaya G</p>
 </footer>
 
-<!-- JS -->
 <script src="script.js"></script>
 </body>
 </html>
