--- a/index.html
+++ b/index.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Akshaya G | Portfolio</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Akshaya G | Portfolio</title>
 
-<link rel="stylesheet" href="style.css">
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css">
 
-<style>
-html { scroll-behavior: smooth; }
-</style>
+    <!-- Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    <style>
+        html { scroll-behavior: smooth; }
+    </style>
 </head>
 <body>
 
@@ -25,63 +30,84 @@ html { scroll-behavior: smooth; }
     <a href="#contact">Contact</a>
 </nav>
 
-<!-- HERO -->
+<!-- HERO SECTION -->
 <header id="home" class="header">
-    <img src="profile.jpg" class="profile-img" alt="Profile">
+    <img src="profile.jpg" alt="Profile Photo" class="profile-img">
+
     <h1>Hello! I’m Akshaya G</h1>
     <p>B.Tech CSBS Student | Aspiring Data Analyst</p>
 
     <div class="social-icons">
-        <a href="https://www.linkedin.com/in/akshaya-gopi-7" target="_blank"><i class="fab fa-linkedin"></i></a>
-        <a href="#"><i class="fab fa-github"></i></a>
-        <a href="mailto:akshayagopi0712@gmail.com"><i class="fas fa-envelope"></i></a>
+        <a href="https://www.linkedin.com/in/akshaya-gopi-7" target="_blank">
+            <i class="fab fa-linkedin"></i>
+        </a>
+        <a href="#" target="_blank">
+            <i class="fab fa-github"></i>
+        </a>
+        <a href="mailto:akshayagopi0712@gmail.com">
+            <i class="fas fa-envelope"></i>
+        </a>
     </div>
 
     <a href="#projects" class="btn">View Projects</a>
 </header>
 
-<!-- ABOUT -->
+<!-- ABOUT SECTION -->
 <section id="about" class="section">
     <h2>About Me</h2>
+
     <p>
-        I am a B.Tech Computer Science and Business Systems student at Jerusalem College of Engineering.
-        I am passionate about programming, data analysis, and visualization.
+        I am a B.Tech Computer Science and Business Systems student at
+        Jerusalem College of Engineering. I am interested in programming,
+        database management, and data analysis.
     </p>
+
     <p><strong>Strengths:</strong> Quick learner, Team player, Consistent</p>
     <p><strong>Career Goal:</strong> Data Analyst / Business Intelligence Role</p>
 </section>
 
-<!-- SKILLS -->
+<!-- SKILLS SECTION -->
 <section id="skills" class="section">
     <h2>Skills</h2>
 
     <div class="skills">
+
         <div class="skill-category">
             <h3>Technical Skills</h3>
 
             <div class="skill-bar">
                 <span>Python</span>
-                <div class="bar"><div class="progress" data-progress="90%"></div></div>
+                <div class="bar">
+                    <div class="progress" data-progress="90%"></div>
+                </div>
             </div>
 
             <div class="skill-bar">
                 <span>Java</span>
-                <div class="bar"><div class="progress" data-progress="80%"></div></div>
+                <div class="bar">
+                    <div class="progress" data-progress="80%"></div>
+                </div>
             </div>
 
             <div class="skill-bar">
                 <span>HTML & CSS</span>
-                <div class="bar"><div class="progress" data-progress="95%"></div></div>
+                <div class="bar">
+                    <div class="progress" data-progress="95%"></div>
+                </div>
             </div>
 
             <div class="skill-bar">
                 <span>MySQL</span>
-                <div class="bar"><div class="progress" data-progress="75%"></div></div>
+                <div class="bar">
+                    <div class="progress" data-progress="75%"></div>
+                </div>
             </div>
 
             <div class="skill-bar">
                 <span>Power BI & DAX</span>
-                <div class="bar"><div class="progress" data-progress="80%"></div></div>
+                <div class="bar">
+                    <div class="progress" data-progress="80%"></div>
+                </div>
             </div>
         </div>
 
@@ -94,14 +120,16 @@ html { scroll-behavior: smooth; }
                 <li>Time Management</li>
             </ul>
         </div>
+
     </div>
 </section>
 
-<!-- PROJECTS -->
+<!-- PROJECTS SECTION -->
 <section id="projects" class="section">
     <h2>Projects</h2>
 
     <div class="projects-grid">
+
         <div class="project-card">
             <h3>Exam Data Analysis</h3>
             <p>Analyzed student exam data and visualized performance insights.</p>
@@ -110,38 +138,46 @@ html { scroll-behavior: smooth; }
 
         <div class="project-card">
             <h3>Portfolio Website</h3>
-            <p>Responsive personal portfolio website.</p>
+            <p>Designed a responsive personal portfolio website.</p>
             <p><strong>Tools:</strong> HTML, CSS, JavaScript</p>
         </div>
 
         <div class="project-card">
             <h3>Database Mini Project</h3>
-            <p>Designed relational database and executed SQL queries.</p>
+            <p>Designed and queried a relational database.</p>
             <p><strong>Tools:</strong> MySQL</p>
         </div>
+
     </div>
 </section>
 
-<!-- RESUME -->
+<!-- RESUME SECTION -->
 <section id="resume" class="section">
     <h2>Resume</h2>
-    <a href="resume.pdf" class="btn resume-btn" target="_blank">Download Resume</a>
+    <a href="resume.pdf" class="btn resume-btn" target="_blank">
+        Download Resume
+    </a>
 </section>
 
-<!-- CONTACT -->
+<!-- CONTACT SECTION -->
 <section id="contact" class="section">
     <h2>Contact</h2>
     <p>Email: akshayagopi0712@gmail.com</p>
     <p>LinkedIn: Akshaya G</p>
 </section>
 
-<!-- BACK TO TOP -->
-<button id="backToTop"><i class="fas fa-arrow-up"></i></button>
+<!-- BACK TO TOP BUTTON -->
+<button id="backToTop">
+    <i class="fas fa-arrow-up"></i>
+</button>
 
+<!-- FOOTER -->
 <footer>
     <p>© 2025 Akshaya G</p>
 </footer>
 
+<!-- JS -->
 <script src="script.js"></script>
+
 </body>
 </html>
