--- a/index.html
+++ b/index.html
@@ -1,145 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Akshaya G | Portfolio</title>
-
-<link rel="stylesheet" href="style.css">
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
-<style>
-html { scroll-behavior: smooth; }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Akshaya G | Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
-<!-- NAVBAR -->
-<nav class="navbar">
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
-    <a href="#skills">Skills</a>
-    <a href="#projects">Projects</a>
-    <a href="#resume">Resume</a>
-    <a href="#contact">Contact</a>
-</nav>
-
-<!-- HERO -->
-<header id="home" class="header">
-    <img src="profile.jpg" alt="Profile Photo" class="profile-img">
-
-    <h1>Hello! I’m Akshaya G</h1>
-    <p>B.Tech CSBS Student | Aspiring Data Analyst</p>
-
-    <!-- SOCIAL MEDIA -->
-    <div class="social-icons">
-        <!-- LINKEDIN (EXACT LINK YOU GAVE) -->
-        <a href="https://www.linkedin.com/in/akshaya-gopi-7b18a5371?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
-           target="_blank" title="LinkedIn">
-            <i class="fab fa-linkedin"></i>
-        </a>
-
-        <!-- GITHUB -->
-        <a href="https://github.com/YOUR_GITHUB_USERNAME"
-           target="_blank" title="GitHub">
-            <i class="fab fa-github"></i>
-        </a>
-
-        <!-- EMAIL -->
-        <a href="mailto:akshayagopi0712@gmail.com" title="Email">
-            <i class="fas fa-envelope"></i>
-        </a>
-    </div>
-
-    <a href="#projects" class="btn">View Projects</a>
+<header>
+    <h1>Akshaya G</h1>
+    <p>B.Tech Computer Science and Business Systems</p>
+    <p>Jerusalem College of Engineering</p>
+    <p class="interest">Interested in Programming, Data & Business Technology</p>
 </header>
 
-<!-- ABOUT -->
-<section id="about" class="section">
+<section>
     <h2>About Me</h2>
     <p>
-        I am a B.Tech Computer Science and Business Systems student at Jerusalem College of Engineering.
-        I am interested in programming, data analysis, and business intelligence.
+        I am a Computer Science and Business Systems student with a strong interest in
+        programming, problem solving, and data handling. I enjoy learning new technologies
+        and improving both my technical and communication skills.
     </p>
-    <p><strong>Strengths:</strong> Quick Learner, Team Player, Consistent</p>
-    <p><strong>Career Goal:</strong> Data Analyst / BI Analyst</p>
+    <p>
+        <strong>Strengths:</strong> Quick learner, self-motivated, teamwork  
+        <br>
+        <strong>Hobbies:</strong> Exploring tech tools, designing simple websites, self-learning
+    </p>
 </section>
 
-<!-- SKILLS -->
-<section id="skills" class="section">
+<section>
     <h2>Skills</h2>
-
-    <div class="skills">
-        <div>
-            <h3>Technical Skills</h3>
-            <ul>
-                <li>C</li>
-                <li>Java</li>
-                <li>Python</li>
-                <li>HTML & CSS</li>
-                <li>MySQL</li>
-                <li>Power BI & DAX</li>
-            </ul>
-        </div>
-
-        <div>
-            <h3>Soft Skills</h3>
-            <ul>
-                <li>Communication</li>
-                <li>Teamwork</li>
-                <li>Problem Solving</li>
-                <li>Time Management</li>
-            </ul>
-        </div>
-    </div>
+    <ul>
+        <li><strong>Technical Skills:</strong> C, Java, Python, HTML, CSS, SQL, Pandas (Basics)</li>
+        <li><strong>Soft Skills:</strong> Communication, Teamwork, Time Management, Presentation</li>
+    </ul>
 </section>
 
-<!-- PROJECTS -->
-<section id="projects" class="section">
+<section>
     <h2>Projects</h2>
 
     <div class="project">
-        <h3>Exam Data Analysis</h3>
-        <p>Analyzed student exam data and visualized insights.</p>
-        <p><strong>Tools:</strong> Python, Pandas, Power BI</p>
+        <h3>Student Portfolio Website</h3>
+        <p>Designed a personal portfolio website to showcase skills and academic details.</p>
+        <p><strong>Tools:</strong> HTML, CSS, VS Code</p>
     </div>
 
     <div class="project">
-        <h3>Portfolio Website</h3>
-        <p>Built a responsive personal portfolio.</p>
-        <p><strong>Tools:</strong> HTML, CSS, JavaScript</p>
+        <h3>Basic Data Analysis using Python</h3>
+        <p>Performed basic data analysis and visualization using Pandas in Jupyter Notebook.</p>
+        <p><strong>Tools:</strong> Python, Pandas, Jupyter</p>
     </div>
 
     <div class="project">
-        <h3>Database Mini Project</h3>
-        <p>Designed and queried a relational database.</p>
-        <p><strong>Tools:</strong> MySQL</p>
+        <h3>Database Queries Project</h3>
+        <p>Practiced SQL queries for managing and retrieving structured data.</p>
+        <p><strong>Tools:</strong> MySQL, Workbench</p>
     </div>
 </section>
 
-<!-- RESUME -->
-<section id="resume" class="section">
+<section>
     <h2>Resume</h2>
-    <a href="resume.pdf" target="_blank" class="btn resume-btn">Download Resume</a>
+    <p>
+        <a href="#" class="btn">Upload / View Resume (PDF)</a>
+    </p>
 </section>
 
-<!-- CONTACT -->
-<section id="contact" class="section">
+<section>
     <h2>Contact</h2>
-    <p>Email: akshayagopi0712@gmail.com</p>
-    <p>LinkedIn: Akshaya G</p>
+    <p><strong>Email:</strong> akshayagopi0712@gmail.com</p>
+    <p>
+        <strong>LinkedIn:</strong>
+        <a href="https://www.linkedin.com/in/akshaya-gopi-7b18a5371" target="_blank">
+            View Profile
+        </a>
+    </p>
+    <p>
+        <strong>GitHub:</strong>
+        <a href="https://github.com/akshayagcsbs2024-dotcom" target="_blank">
+            akshayagcsbs2024-dotcom
+        </a>
+    </p>
 </section>
-
-<button id="backToTop">
-    <i class="fas fa-arrow-up"></i>
-</button>
 
 <footer>
-    <p>© 2025 Akshaya G</p>
+    <p>© 2025 Akshaya G | CSBS Portfolio</p>
 </footer>
 
-<script src="script.js"></script>
 </body>
 </html>
